# OgreOculusApp

./: .gitmodules  CMakeLists.txt  Readme.md  install_here_cmake2.8.12_linux.sh
cfg/: SAMPLE COPIES.txt  parameters.cfg  plugins.cfg  plugins_d.cfg  resources.cfg
cmake/: PostInstall.cmake
include/: App.h  Camera.h  Globals.h  Rift.h  Scene.h
libs/: compile_here_OculusSDK0.5.0.1_linux.sh  compile_here_OculusSDK0.5.0.1custom_linux.sh  get_OGRE1.9_linux.sh  install_here_OGRE1.9_linux.sh  install_here_dependenciesONLY_OGRE1.9_linux.sh  install_here_opencv2.4_linux.sh  install_here_opencv3_linux.sh  install_system_OGRE1.9_dependencies_linux.sh  install_system_OGRE1.9_linux.sh  install_system_OculusSDK0.5.0.1+dependencies_linux.sh  install_system_OculusSDK0.5.0.1_dependencies_linux.sh  install_system_OculusSDK0.5.0.1custom+dependencies_linux.sh  install_system_OculusSDK0.5.0.1custom_linux.sh  install_system_dependenciesONLY_OGRE1.9_linux.sh  install_system_dependenciesONLY_OculusSDK0.5.0.1_linux.sh  use_OculusSDK0.5.0.1_linux.sh  use_here_OculusSDK0.5.0.1custom_linux.sh
media/: FisheyeImageDistortionFragment.glsl  FisheyeImageMapping.material  FisheyeSampleImageMapping.material  FisheyeUndistort.polysphere.mesh  FisheyeUndistort.polysphere.mesh.xml  OculusDistortionFragment.glsl  OculusDistortionVertex.glsl  PinholeImageMapping.material  floor.material  skyrender.material
src/: App.cpp  Camera.cpp  Globals.cpp  Rift.cpp  Scene.cpp
src/demo/: main.cpp
